--- a/TRPO/Pages/MenuPage.xaml
+++ b/TRPO/Pages/MenuPage.xaml
@@ -16,11 +16,13 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="1" Margin="0,50,0,0">
+            <TextBlock Text="Меню" TextAlignment="Center" FontSize="18" Foreground="{DynamicResource MainTextColorResource}"/>
             <Button Margin="5" x:Name="ListOfProducts" Click="ListOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Список товаров</Button>
             <Button Margin="5" x:Name="ReceiptOfProducts" Click="ReceiptOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Постпуление товаров</Button>
             <Button Margin="5" x:Name="Settings" Click="Settings_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Настройки"/>
             <Button Margin="5" x:Name="Register" Click="Register_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Регистрация пользователя"/>
             <Button Margin="5" x:Name="Accounting" Click="Accounting_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Учет товаров"/>
+            <Button Margin="5" x:Name="LogOut" Click="LogOut_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Выйти"/>
         </StackPanel>
         
     </Grid>
