--- a/TRPO/Pages/PageAccountingOfGoods.xaml
+++ b/TRPO/Pages/PageAccountingOfGoods.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-
+        <Button Grid.Column="0" Grid.Row="0" Content="Отчет" VerticalAlignment="Center" HorizontalAlignment="Center" Name="OtchButton" Click="OtchButton_Click"></Button>
         <TextBox Grid.Row="0" Grid.Column="1" x:Name="SearchTextBox" VerticalAlignment="Top" Margin="15" TextChanged="SearchTextBox_TextChanged"/>
         <Button Content="Добавить" Height="auto" Width="auto" Margin="5" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Name="AddButton" Click="AddButton_Click"/>
         <DataGrid ItemsSource="{Binding Path=App.GetProduct}" ColumnWidth="*" Grid.Row="1" Grid.Column="1" x:Name="AccountingOfGoodsDataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" IsReadOnly="True" CanUserSortColumns="True" SelectionChanged="AccountingOfGoodsDataGrid_SelectionChanged" >
